force-app/main/default/objects/SIOC__VendorResponseEntity__c/SIOC__VendorResponseEntity__c.object-meta.xml
<CustomObject>
    <label>Vendor Response Entity</label>
    <nameField>
        <displayFormat>VRE-{00000}</displayFormat>
        <label>Vendor Response Entity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Response Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>