force-app/main/default/objects/SIOC__VendorResponseEntity__c/fields/SIOC__EntityType__c.field-meta.xml
<CustomField>
    <fullName>SIOC__EntityType__c</fullName>
    <description>Type of Entity</description>
    <label>Entity Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>