force-app/main/default/objects/SIOC__VendorResponseEntity__c/fields/SIOC__Internal_Ref_Id__c.field-meta.xml
<CustomField>
    <fullName>SIOC__Internal_Ref_Id__c</fullName>
    <description>The system automatically populates this text field with an internal unique ID for this entity.</description>
    <inlineHelpText>This system-populated required field displays the unique ID for this entity.</inlineHelpText>
    <label>Internal Reference ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>