force-app/main/default/objects/SIOC__VendorResponseEntity__c/fields/SIOC__Primary_Entity__c.field-meta.xml
<CustomField>
    <fullName>SIOC__Primary_Entity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The system automatically populates this checkbox field to indicate that the entity started the application.</description>
    <inlineHelpText>This system-populated field selects this checkbox when the entity starts the application.</inlineHelpText>
    <label>Primary Entity</label>
    <type>Checkbox</type>
</CustomField>