force-app/main/default/objects/SIOC__VendorResponseEntity__c/fields/SIOC__VendorResponse__c.field-meta.xml
<CustomField>
    <fullName>SIOC__VendorResponse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor Response</label>
    <referenceTo>SIOC__VendorResponse__c</referenceTo>
    <relationshipLabel>Vendor Response Entities</relationshipLabel>
    <relationshipName>Vendor_Responses_Entities</relationshipName>
    <type>Lookup</type>
</CustomField>